--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -22,6 +22,13 @@ spring:
     charset: UTF-8
     template-loader-path: classpath:/templates
     request-context-attribute: request   #必须配置才能使用${request.contextPath}
+  security:
+    oauth2:
+      client:
+        registration:
+          github:
+            client-id: 517b7acc219b61ba45f0
+            client-secret: efc520fccbc62ff793dcf6d8331e8adaa2a166e4
 mybatis:
   mapperLocations: ['classpath*:mapper/**/*Mapper.xml','classpath*:mapper/**/*MapperCustom.xml']
   executor-type: REUSE 
