--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -22,6 +22,20 @@ spring:
     charset: UTF-8
     template-loader-path: classpath:/templates
     request-context-attribute: request   #必须配置才能使用${request.contextPath}
+  cache:
+    type: Redis   #None-禁止缓存； Simple 自带缓存，ConcurrentHashMap实现。
+  redis: 
+    host: 127.0.0.1
+    port: 6379
+    lettuce:
+      pool:
+        # 最大活跃链接数 默认8
+        max-active: 100
+        # 最大空闲连接数 默认90
+        max-idle: 8
+        # 最小空闲连接数 默认0
+        min-idle: 0
+        
   security:
     oauth2:
       client:
